Updated make file

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-genalg_codewars: codewars.h genome.h GA.cpp
+genalg_codewars: herd.h codewars.h genome.h GA.cpp
 	g++ -std=c++11 -o genalg_codewars GA.cpp
 
 clean:
